--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -27,6 +27,7 @@
     justify-content: center;
     align-items: center;
     padding: 0 2rem;
+    position: relative;
 }
 
 @media (max-width: 600px) {
@@ -118,6 +119,8 @@
 @media (max-width: 960px) {
     .menu-toggle {
         display: flex;
+        position: absolute;
+        right: 1.5rem;
     }
 
     .nav-links {
